// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing _qubitInput classical register 1`] = `"<text x=\\"20\\" y=\\"20\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>"`;

exports[`Testing _qubitInput classical register 2`] = `"<text x=\\"20\\" y=\\"50\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>"`;

exports[`Testing _qubitInput classical register 3`] = `"<text x=\\"20\\" y=\\"0\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>"`;

exports[`Testing formatInputs 1 quantum register 1`] = `"<text x=\\"20\\" y=\\"40\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>"`;

exports[`Testing formatInputs Multiple quantum registers 1`] = `
"<text x=\\"20\\" y=\\"40\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>
<text x=\\"20\\" y=\\"100\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>
<text x=\\"20\\" y=\\"160\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>"
`;

exports[`Testing formatInputs Quantum and classical registers 1`] = `
"<text x=\\"20\\" y=\\"40\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>
<text x=\\"20\\" y=\\"120\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>
<text x=\\"20\\" y=\\"180\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>"
`;

exports[`Testing formatInputs Quantum and classical registers 2`] = `
"<text x=\\"20\\" y=\\"40\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>
<text x=\\"20\\" y=\\"100\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>
<text x=\\"20\\" y=\\"220\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>"
`;

exports[`Testing formatInputs Skip quantum registers 1`] = `
"<text x=\\"20\\" y=\\"40\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>
<text x=\\"20\\" y=\\"100\\" dominant-baseline=\\"middle\\" text-anchor=\\"start\\">|0⟩</text>"
`;
